# sparkwatch

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: tests.yaml
sparkwatch/: base.py  exceptions.py
sparkwatch/stats/: _utils.py  binning.py  cdf.py  histogram.py  pre_commit_test.py
sparkwatch/tests/: conftest.py  test_base.py
sparkwatch/tests/stats/: test_binning.py
