[project]
name = "sparkwatch"
version = "0.1.0"
authors = [
  { name="Juan Echeagaray", email="pabloechg@outlook.com" },
]
description = "Spark Based ML Utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sparkwatch"]

[tool.pytest.ini_options]
addopts = "--cov=sparkwatch"
testpaths = [
    "sparkwatch/tests"
]